// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Org details",
      },
    }
  }
>
  <PageContents
    isLoading={true}
  />
</Page>
`;

exports[`Render should render organization and preferences 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Org details",
      },
    }
  }
>
  <PageContents
    isLoading={false}
  >
    <Component>
      <OrgProfile
        onSubmit={[Function]}
        orgName="Cool org"
      />
      <SharedPreferences
        resourceUri="org"
      />
    </Component>
  </PageContents>
</Page>
`;
